kubernetes/prod/us-west-2/graylog/06-mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-graylog
  labels:
  namespace: logging
spec:
  selector:
    k8s-app: mongo-graylog
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-graylog
  namespace: logging
spec:
  selector:
    matchLabels:
      k8s-app: mongo-graylog
  serviceName: "mongo-graylog"
  replicas: 3
  template:
    metadata:
      labels:
        k8s-app: mongo-graylog
    spec:
      terminationGracePeriodSeconds: 100
      serviceAccountName: mongo-graylog
      containers:
        - name: mongo
          image: mongo:4.0.16
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--smallfiles"
            - "--noprealloc"
            - "--bind_ip_all"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1024Mi
        - name: mongo-sidecar
          # This one has to use :latest as upstream doesn't label
          # builds by version
          image: cvallance/mongo-k8s-sidecar:latest
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent-storage
      annotations:
        volume.beta.kubernetes.io/storage-class: "logging-storage"
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
