kubernetes/prod/us-west-2/graylog/10-graylog-master.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: graylog-master
  namespace: logging
spec:
  selector:
    matchLabels:
      k8s-app: graylog-master
  serviceName: "graylog-master"
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: graylog-master
        graylog-role: master
        graylog: "true"
    spec:
      terminationGracePeriodSeconds: 70
      affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: graylog-role
                  operator: In
                  values:
                  - graylog-slave
              topologyKey: kubernetes.io/hostname
      containers:
        - name: graylog-master
          image: graylog/graylog:3.0.2
          ports:
          - containerPort: 9000
            name: http
          - containerPort: 12201
            name: udp-input
          - containerPort: 1514
            name: tcp-input
          volumeMounts:
          - name: graylog-persistent-storage
            mountPath: /usr/share/graylog/data/journal
            subPath: graylog
          - name: graylog-plugins-storage
            mountPath: /usr/share/graylog/plugin
            subPath: graylog
          resources:
            requests:
              cpu: .25
              memory: 1536Mi
            limits:
              cpu: 1.5
              memory: 2048Mi
          readinessProbe:
            httpGet:
              path: /api/system/lbstatus
              port: 9000
            initialDelaySeconds: 90
            periodSeconds: 3
            timeoutSeconds: 60
            successThreshold: 1
            failureThreshold: 2
  volumeClaimTemplates:
  - metadata:
      name: graylog-persistent-storage
      annotations:
        volume.beta.kubernetes.io/storage-class: "logging-storage"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 60Gi
  - metadata:
      name: graylog-plugins-storage
      annotations:
        volume.beta.kubernetes.io/storage-class: "logging-storage"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: graylog-master
  labels:
    name: graylog-master
    k8s-app: graylog-master
  namespace: logging
spec:
  selector:
    k8s-app: graylog-master
  ports:
  - name: http
    protocol: TCP
    port: 9000
  clusterIP: None
