kubernetes/prod/us-west-2/graylog/25-elasticsearch-metrics-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: graylog-es-metrics-exporter
  name: graylog-es-metrics-exporter
  namespace: logging
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      k8s-app: graylog-es-metrics-exporter
  template:
    metadata:
      labels:
        k8s-app: graylog-es-metrics-exporter
    spec:
      containers:
      - image: justwatch/elasticsearch_exporter:1.0.4rc1
        name: graylog-es-metrics-exporter
        command:
          - /bin/elasticsearch_exporter
          - -es.uri=https://vpc-graylog-prod-uazovty6jvwvezxrgtlktw3swm.us-west-2.es.amazonaws.com
          - -es.all=true
          - -es.indices=true
        livenessProbe:
          httpGet:
            path: /health
            port: 9108
          initialDelaySeconds: 30
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 9108
          initialDelaySeconds: 10
          timeoutSeconds: 10
        ports:
        - containerPort: 9108
          name: metrics
        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: graylog-es-metrics-exporter
  namespace: logging
  labels:
    k8s-app: graylog-es-metrics-exporter
spec:
  ports:
  - name: metrics
    port: 9108
    targetPort: metrics
  selector:
    k8s-app: graylog-es-metrics-exporter
  clusterIP: None
