kubernetes/prod/us-west-2/graylog/30-oidc-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: graylog-oidc-proxy
  name: graylog-oidc-proxy
  namespace: logging
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      k8s-app: graylog-oidc-proxy
  template:
    metadata:
      labels:
        k8s-app: graylog-oidc-proxy
    spec:
      containers:
      - image:  itsre/graylog-oidc-proxy:1.1
        name: graylog-oidc-proxy
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
      securityContext:
        runAsNonRoot: false
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: graylog-oidc-proxy
  labels:
    name: graylog-oidc-proxy
    k8s-app: graylog-oidc-proxy
  namespace: logging
spec:
  selector:
    k8s-app: graylog-oidc-proxy
  ports:
  - name: https
    protocol: TCP
    port: 443
  - name: http
    protocol: TCP
    port: 80
  clusterIP: None
